--- a/war/style.css
+++ b/war/style.css
@@ -646,7 +646,7 @@ scroll {  0% {
 }
 
 .portfolio{
-
+	border: 2px solid black;
 }
 
 
@@ -704,7 +704,7 @@ scroll {  0% {
   }
   
   #filters li span.active {
-    background: #e95a44;
+    background: #160093;
     color:#fff;
   }
  
@@ -741,7 +741,7 @@ scroll {  0% {
   }
 
     .portfolio .label-bg {
-      background: #e95a44;
+      background: #160093;
       width: 100%;
       height:100%;
       position: absolute;
@@ -1189,4 +1189,6 @@ hr {
 	height: 2px;
 	background-color: #168bd1;
 }
+
+
 
